--- a/ctzn-app.html
+++ b/ctzn-app.html
@@ -139,12 +139,12 @@ title: CTZN App
 
   </div>
 
-  <a href="/good-community" class="banner" style="background-image: url(/images/projects/good-community.png); background-size: cover; background-position: 2% 50%;">
+  <a href="/good-community" class="banner next" style="background-image: url(/images/projects/good-community.png); background-size: cover; background-position: 2% 50%;">
     <div>
       <h2>Next project →</h2>
     </div>
     <div>
       <h1>GOOD Community</h1>
-      <p>with the team at <span style="display: inline-block">GOOD Worldwide</span></p>
+      <p>with the team at <span class="phrase">GOOD Worldwide</span></p>
     </div>
   </a>
