--- a/good-community.html
+++ b/good-community.html
@@ -120,12 +120,12 @@ title: GOOD Community
 
   </div>
 
-  <a href="/ok-the-store" class="banner" style="background-image: url(/images/projects/ok-the-store.jpg)">
+  <a href="/ok-the-store" class="banner next" style="background-image: url(/images/projects/ok-the-store.jpg)">
     <div>
       <h2>Next project →</h2>
     </div>
     <div>
       <h1>OK the Store</h1>
-      <p>with the team at <span style="display: inline-block">Barrel Strength Design</span></p>
+      <p>with the team at <span class="phrase">Barrel Strength Design</span></p>
     </div>
   </a>
