--- a/good-fest.html
+++ b/good-fest.html
@@ -14,11 +14,11 @@ title: GOOD Fest
 
   <div class="container">
 
-    <p>GOOD Fest is a music festival hosted on the web and at venues in five different cities, celebrating positive things people are doing in the world, while raising funds <span style="display: inline-block;">for charity.</span></p>
+    <p>GOOD Fest is a music festival hosted on the web and at venues in five different cities, celebrating positive things people are doing in the world, while raising funds <span class="phrase">for charity.</span></p>
 
     <p>During the project I worked with our designer, Josh, and our engineer, Brian, to create a responsive microsite with live video streams and information about each of the shows. This project was particularly challenging, since we were still completing the web site while the festival was in progress, and each new feature needed to be timed with the start time of the next show.</p>
 
-    <p>At the end of the festival, we created promotions for <a href="https://www.good.is/articles/goodfest-announcement-concert">GOOD Magazine</a> and a <!--<a href="https://goodfest.good.is/featured-video/goodfest" style="display: inline-block;">-->video archive of the shows.</p>
+    <p>At the end of the festival, we created promotions for <a href="https://www.good.is/articles/goodfest-announcement-concert">GOOD Magazine</a> and a <!--<a href="https://goodfest.good.is/featured-video/goodfest">-->video archive of the shows.</p>
 
     <p>My role involved creating prototypes, facilitating design discussions, getting sign-off from decision-makers, writing production-quality HTML, CSS and JavaScript for the user interface, testing for accessibility and browser/device compatibility, fine-tuning the code for better performance, and integrating the HTML with server-side templates. (We used Ruby on Rails.)</p>
 
@@ -38,7 +38,10 @@ title: GOOD Fest
       <a href="https://goodfest.good.is"><img src="/images/good-fest/Screen Shot 2017-08-20 at 3.33.23 AM.png" width="500" alt="GOODFest, A livestream festival for good." /></a>
     </figure>
     <figure>
-      <!--<a href="https://goodfest.good.is/featured-video/goodfest">--><img src="/images/good-fest/Screen Shot 2017-08-20 at 3.35.02 AM.png" width="500" alt="GOODfest Video Archive" />
+      {% comment %}
+      <a href="https://goodfest.good.is/featured-video/goodfest">
+      {% endcomment %}
+      <img src="/images/good-fest/Screen Shot 2017-08-20 at 3.35.02 AM.png" width="500" alt="GOODfest Video Archive" />
     </figure>
 
     <h2>Crew</h2>
@@ -69,13 +72,10 @@ title: GOOD Fest
       <h3>Marketing</h3>
       <ul>
         <li><a href="https://www.linkedin.com/in/vandenorth/">Joseph Vandenorth</a></li>
-        <!--
         <li><a href="http://www.goodinc.com/community/team/kritika_misra">Kritika Misra</a></li>
-        -->
       </ul>
     </div>
 
-    <!--
     <div>
       <h3>Video</h3>
       <ul>
@@ -83,45 +83,33 @@ title: GOOD Fest
         <li><a href="http://www.edwardchoi.com/#/goodfest/">Eddy Choi</a></li>
       </ul>
     </div>
-    -->
 
     <div>
       <h3>Production</h3>
       <ul>
         <li><a href="https://www.linkedin.com/in/alice-lin-2b544068/">Alice Lin</a></li>
-        <!--
         <li><a href="http://www.goodinc.com/community/team/grace_kim">Grace Kim</a></li>
         <li><a href="http://laurenturkmusic.com/">Lauren Turk</a></li>
-        -->
       </ul>
     </div>
 
-    <!--
     <div>
       <h3>Strategy</h3>
       <ul>
         <li><a href="http://www.goodinc.com/community/team/andy_morris">Andy Morris</a></li>
-
         <li><a href="http://www.goodinc.com/community/team/katherine_zeng">Katherine Zeng</a></li>
-        <li><a href="http://www.goodinc.com/community/team/max_schorr">Max Schorr</a></li>
-
+        <li><a href="https://www.linkedin.com/in/larsonaubrey">Aubrey Larson</a></li>
       </ul>
     </div>
-    -->
 
     <div>
-      <h3>Strategy</h3>
+      <h3>Team Coordination</h3>
       <ul>
-        <li><a href="https://www.linkedin.com/in/larsonaubrey">Aubrey Larson</a></li>
-        <!--
-        <li><a href="http://www.goodinc.com/community/team/caitlyn_young">Caitlyn Young</a></li>
-        -->
         <li><a href="https://www.linkedin.com/in/joanhanawi">Joan Hanawi</a></li>
-        <!--
-        <li><a href="http://www.goodinc.com/community/team/marchela_iahdjian">Marchela Iahdjian</a></li>
         <li><a href="http://www.goodinc.com/community/team/mindy_nguyen">Mindy Nguyen</a></li>
+        <li><a href="http://www.goodinc.com/community/team/caitlyn_young">Caitlyn Young</a></li>
+        <li><a href="http://www.goodinc.com/community/team/marchela_iahdjian">Marchela Iahdjian</a></li>
         <li><a href="http://www.goodinc.com/community/team/will_tacy">Will Tacy</a></li>
-        -->
       </ul>
     </div>
 
@@ -164,12 +152,12 @@ title: GOOD Fest
 
   </div>
 
-  <a href="/grand-park" class="banner" style="background-image: url(/images/projects/july4.png)">
+  <a href="/grand-park" class="banner next" style="background-image: url(/images/projects/july4.png)">
     <div>
       <h2>Next project →</h2>
     </div>
     <div>
-      <h1>4th of July <span style="display: inline-block">at Grand Park</span></h1>
-      <p>with the team at <span style="display: inline-block">The Music Center</span></p>
+      <h1>4th of July <span class="phrase">at Grand Park</span></h1>
+      <p>with the team at <span class="phrase">The Music Center</span></p>
     </div>
   </a>
