--- a/good.html
+++ b/good.html
@@ -110,12 +110,12 @@ title: GOOD Worldwide
 
   </div>
 
-  <a href="/food-oasis" class="banner" style="background-image: url(/images/projects/food-oasis.jpg);">
+  <a href="/food-oasis" class="banner next" style="background-image: url(/images/projects/food-oasis.jpg);">
     <div>
       <h2>Next project →</h2>
     </div>
     <div>
-      <h1>Food Oasis <span style="display: inline-block;">Los Angeles</span></h1>
-      <p>with the volunteers at <span style="display: inline-block">Code for America</span></p>
+      <h1>Food Oasis <span class="phrase">Los Angeles</span></h1>
+      <p>with the volunteers at <span class="phrase">Code for America</span></p>
     </div>
   </a>
