--- a/grand-park.html
+++ b/grand-park.html
@@ -7,7 +7,7 @@ title: 4th of July at Grand Park
 
   <div class="banner" style="background-image: url(/images/projects/july4-responsive.jpg); background-position: 25% 50%;">
     <div>
-      <h1>4th of July <span style="display: inline-block">at Grand Park</span></h1>
+      <h1>4th of July <span class="phrase">at Grand Park</span></h1>
       <p>with the team at <a href="https://www.musiccenter.org">The Music Center</a></p>
     </div>
   </div>
@@ -97,12 +97,12 @@ title: 4th of July at Grand Park
 
   </div>
 
-  <a href="/kiva" class="banner" style="background-image: url(/images/projects/1-hW4eUha20IP4hfd0z5uoDg.jpeg)">
+  <a href="/kiva" class="banner next" style="background-image: url(/images/projects/1-hW4eUha20IP4hfd0z5uoDg.jpeg)">
     <div>
       <h2>Next project →</h2>
     </div>
     <div>
       <h1>10 Days of Lending</h1>
-      <p>with the teams at Kiva and <span style="display: inline-block">GOOD Worldwide</span></p>
+      <p>with the teams at Kiva and <span class="phrase">GOOD Worldwide</span></p>
     </div>
   </a>
