--- a/index.html
+++ b/index.html
@@ -1,73 +1,15 @@
 ---
 layout: default
 title: Style & Code for the Web, by Jim Thoburn
-beta_title: Style & Code for the Web, by Jim Thoburn 🌩 🐻
+
+emoji_title: Style & Code for the Web, by Jim Thoburn 🌩 🐻
+
 class: home
 ---
 
-  <div class="container">
+  <div class="container introduction">
 
-    <div class="clouds">
-
-      <svg class="cloud" width="0" height="0" viewBox="0 0 376.5 263.2">
-        <path d="M254.4,41.9c0,0,118-20.7,122,88.3c3.4,92-95.7,91-95.7,91s-20.3,42-77,42c-60.7,0-84-45-84-45s-86.3,17.7-112-46.3c-31.1-77.4,41.7-95.3,41.7-95.3s9.3-30.3,31.3-44.3s57-2.7,57-2.7s21-32.3,60-29.3S254.4,41.9,254.4,41.9z"/>
-      </svg>
-
-      <svg class="cloud" width="0" height="0" viewBox="0 0 376.5 263.2">
-        <path d="M254.4,41.9c0,0,118-20.7,122,88.3c3.4,92-95.7,91-95.7,91s-20.3,42-77,42c-60.7,0-84-45-84-45s-86.3,17.7-112-46.3c-31.1-77.4,41.7-95.3,41.7-95.3s9.3-30.3,31.3-44.3s57-2.7,57-2.7s21-32.3,60-29.3S254.4,41.9,254.4,41.9z"/>
-      </svg>
-
-      <svg class="cloud" width="0" height="0" viewBox="0 0 376.5 263.2">
-        <path d="M254.4,41.9c0,0,118-20.7,122,88.3c3.4,92-95.7,91-95.7,91s-20.3,42-77,42c-60.7,0-84-45-84-45s-86.3,17.7-112-46.3c-31.1-77.4,41.7-95.3,41.7-95.3s9.3-30.3,31.3-44.3s57-2.7,57-2.7s21-32.3,60-29.3S254.4,41.9,254.4,41.9z"/>
-      </svg>
-
-      <svg class="cloud" width="0" height="0" viewBox="0 0 376.5 263.2">
-        <path d="M254.4,41.9c0,0,118-20.7,122,88.3c3.4,92-95.7,91-95.7,91s-20.3,42-77,42c-60.7,0-84-45-84-45s-86.3,17.7-112-46.3c-31.1-77.4,41.7-95.3,41.7-95.3s9.3-30.3,31.3-44.3s57-2.7,57-2.7s21-32.3,60-29.3S254.4,41.9,254.4,41.9z"/>
-      </svg>
-
-      <svg class="cloud" width="0" height="0" viewBox="0 0 376.5 263.2">
-        <path d="M254.4,41.9c0,0,118-20.7,122,88.3c3.4,92-95.7,91-95.7,91s-20.3,42-77,42c-60.7,0-84-45-84-45s-86.3,17.7-112-46.3c-31.1-77.4,41.7-95.3,41.7-95.3s9.3-30.3,31.3-44.3s57-2.7,57-2.7s21-32.3,60-29.3S254.4,41.9,254.4,41.9z"/>
-      </svg>
-
-      <!--
-      <svg class="cloud" width="0" height="0" viewBox="0 0 376.5 263.2">
-        <path d="M254.4,41.9c0,0,118-20.7,122,88.3c3.4,92-95.7,91-95.7,91s-20.3,42-77,42c-60.7,0-84-45-84-45s-86.3,17.7-112-46.3c-31.1-77.4,41.7-95.3,41.7-95.3s9.3-30.3,31.3-44.3s57-2.7,57-2.7s21-32.3,60-29.3S254.4,41.9,254.4,41.9z"/>
-      </svg>
-
-      <svg class="cloud" width="0" height="0" viewBox="0 0 376.5 263.2">
-        <path d="M254.4,41.9c0,0,118-20.7,122,88.3c3.4,92-95.7,91-95.7,91s-20.3,42-77,42c-60.7,0-84-45-84-45s-86.3,17.7-112-46.3c-31.1-77.4,41.7-95.3,41.7-95.3s9.3-30.3,31.3-44.3s57-2.7,57-2.7s21-32.3,60-29.3S254.4,41.9,254.4,41.9z"/>
-      </svg>
-
-      <svg class="cloud" width="0" height="0" viewBox="0 0 376.5 263.2">
-        <path d="M254.4,41.9c0,0,118-20.7,122,88.3c3.4,92-95.7,91-95.7,91s-20.3,42-77,42c-60.7,0-84-45-84-45s-86.3,17.7-112-46.3c-31.1-77.4,41.7-95.3,41.7-95.3s9.3-30.3,31.3-44.3s57-2.7,57-2.7s21-32.3,60-29.3S254.4,41.9,254.4,41.9z"/>
-      </svg>
-
-      <svg class="cloud" width="0" height="0" viewBox="0 0 376.5 263.2">
-        <path d="M254.4,41.9c0,0,118-20.7,122,88.3c3.4,92-95.7,91-95.7,91s-20.3,42-77,42c-60.7,0-84-45-84-45s-86.3,17.7-112-46.3c-31.1-77.4,41.7-95.3,41.7-95.3s9.3-30.3,31.3-44.3s57-2.7,57-2.7s21-32.3,60-29.3S254.4,41.9,254.4,41.9z"/>
-      </svg>
-
-      <svg class="cloud" width="0" height="0" viewBox="0 0 376.5 263.2">
-        <path d="M254.4,41.9c0,0,118-20.7,122,88.3c3.4,92-95.7,91-95.7,91s-20.3,42-77,42c-60.7,0-84-45-84-45s-86.3,17.7-112-46.3c-31.1-77.4,41.7-95.3,41.7-95.3s9.3-30.3,31.3-44.3s57-2.7,57-2.7s21-32.3,60-29.3S254.4,41.9,254.4,41.9z"/>
-      </svg>
-      -->
-
-      <div class="stars"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
-
-    </div>
-
-    <div class="sun">
-      <svg width="0" height="0" viewBox="0 0 116 116">
-        <circle cx="58" cy="58" r="27"/>
-        <path d="M22,61c0,0,2-0.8,2-3c0-2.3-2-3-2-3H2c0,0-2,0.8-2,3c0,2.3,2,3,2,3H22z"/>
-        <path d="M114,61c0,0,2-0.8,2-3c0-2.3-2-3-2-3H94c0,0-2,0.8-2,3c0,2.3,2,3,2,3H114z"/>
-        <path d="M61,94c0,0-0.8-2-3-2c-2.3,0-3,2-3,2v20c0,0,0.8,2,3,2c2.3,0,3-2,3-2V94z"/>
-        <path d="M61,2c0,0-0.8-2-3-2c-2.3,0-3,2-3,2v20c0,0,0.8,2,3,2c2.3,0,3-2,3-2V2z"/>
-        <path d="M34.7,85.6c0,0,0.9-1.9-0.7-3.5c-1.6-1.6-3.5-0.7-3.5-0.7l-9.2,9.2c0,0-0.9,1.9,0.7,3.5,c1.6,1.6,3.5,0.7,3.5,0.7L34.7,85.6z"/>
-        <path d="M94.8,25.5c0,0,0.9-1.9-0.7-3.5c-1.6-1.6-3.5-0.7-3.5-0.7l-9.2,9.2c0,0-0.9,1.9,0.7,3.5,c1.6,1.6,3.5,0.7,3.5,0.7L94.8,25.5z"/>
-        <path d="M85.6,81.3c0,0-1.9-0.9-3.5,0.7c-1.6,1.6-0.7,3.5-0.7,3.5l9.2,9.2c0,0,1.9,0.9,3.5-0.7,c1.6-1.6,0.7-3.5,0.7-3.5L85.6,81.3z"/>
-        <path d="M25.5,21.2c0,0-1.9-0.9-3.5,0.7c-1.6,1.6-0.7,3.5-0.7,3.5l9.2,9.2c0,0,1.9,0.9,3.5-0.7,c1.6-1.6,0.7-3.5,0.7-3.5L25.5,21.2z"/>
-      </svg>
-    </div>
+    {% include sky.html %}
 
     <a class="ahoy">
       <span class="movable-ship">
@@ -75,206 +17,104 @@ class: home
       </span>
     </a>
 
-    <!--
-    <p>Ahoy there! <span style="display: inline-block">I’m Jim, a user interface developer,</span> <span style="display: inline-block">based in <span style="display: inline-block">Los Angeles.</span></span></p>
+    <h1>Ahoy there! I’m Jim, a {% comment %}<!-- sailor on a ship -->{% endcomment %} user interface developer, <span class="phrase">based in <span class="phrase">Los Angeles.</span></span></h1>
 
-    <p class="action" style="float: right; margin-left: 1.4em; margin-top: 0.7em;"><a href="#hello">Say hello</a></p>
-    -->
+    <h2>I partner with designers &amp; engineers to create products for the Web that are pleasing to users and built to last.</h2>
 
-    <!--
-    <p>alpha: <span id="alpha"></span></p>
-    <p>beta: <span id="beta"></span></p>
-    <p>gamma: <span id="gamma"></span></p>
-    -->
-    <script>
+    <p class="action"><a href="#hello">Say hello</a></p>
 
-      function _onOrientationChange(e) {
-        var alpha = e.alpha;
-        var beta  = e.beta;
-        var gamma = e.gamma;
-
-        /*
-        document.getElementById("alpha").innerHTML = Math.round(alpha);
-        document.getElementById("beta").innerHTML  = Math.round(beta);
-        document.getElementById("gamma").innerHTML = Math.round(gamma);
-        */
-
-        if (gamma > 35) {
-          document.documentElement.style.setProperty('--device-gamma', (beta > 90) ? -1 : 1);
-        } else if (gamma < -35) {
-          document.documentElement.style.setProperty('--device-gamma', (beta > 90) ? 1 : -1);
-        } else {
-          document.documentElement.style.setProperty('--device-gamma', 0);
-        }
-
-        if (beta > 35) {
-          document.documentElement.style.setProperty('--device-beta', -1);
-        } else if (beta < -35) {
-          document.documentElement.style.setProperty('--device-beta', 1);
-        } else {
-          document.documentElement.style.setProperty('--device-beta', 0);
-        }
-
-        throttle = undefined;
-      };
-
-      var throttle = undefined;
-      function onOrientationChange(e) {
-        if (throttle !== undefined) return;
-        throttle = setTimeout(function() {
-          _onOrientationChange(e);
-        }, 100);
-      }
-
-      window.addEventListener("deviceorientation", onOrientationChange, false);
-
-    </script>
-
-    <h1>Ahoy there! I’m Jim, <span>a <!--<del style="opacity: 0.5">treasure-hunting buccaneer</del>--> <!-- web design engineer --> <!--<del>pirate</del>--> user interface developer,</span> <span style="display: inline-block">based in <span style="display: inline-block">Los Angeles.</span></span></h1>
-
-    <h2>I partner with <!-- business owners,--> designers &amp; engineers to create products for the Web that are pleasing to users and built to last.</h2>
-
-    <p class="action" style="float: right; margin: 0.7em 0 0 0.7em;"><a href="#hello">Say hello</a></p>
-
-    <p>If you’re making a web site or application, I can assist with <span>prototypes,</span> <a href="#services">universal design</a>, pattern libraries, and more!</p>
-    <p>Here are some example projects…</p>
+    <p>If you’re making a web site or application, I can assist with prototypes, <a href="#services">universal design</a>, pattern libraries, and more!</p>
 
     {% comment %}
-    <h2>Here are some example projects…</h2>
-    <ul class="action" style="margin-top: 2.8em;">
-      <!--
-      <li><a href="#services">Prototypes</a></li>
-      <li><a href="#services">Universal Design</a></li>
-      <li><a href="#services">Pattern Libraries</a></li>
-      -->
-      <li><a href="#hello">Say hello</a></li>
-    </ul>
+    <!--
+    <p>I can also bake cookies 🍞 🍪 or take action shots during a project 📷 🖼  : )</p>
+    -->
     {% endcomment %}
 
-    <!--
-    <h2>I also like to bake 🍞 🍪 and take pictures 📷 🖼</h2>
-    -->
-
-    <!--
-    <p>If you’re making a web site or application, I can assist with <a href="#services">prototypes, responsive design, pattern libraries</a> and more! Here are some example projects…</p>
-    -->
-
-    <!--
-    <h2>Here are some projects &amp; teams I’ve been a part of…</h2>
-    <p>Whether you’re making a new product or updating an established one, <a href="#services">I can assist</a> during your design and engineering process to help produce the best results possible.</p>
-
-    <h2>Here are some projects &amp; teams I’ve been a part of…</h2>
-    -->
-
-    <!--
-    <h1>I speak <span style="">design &amp; code</span></h1>
-
-    <p>If you’re making a web site or application, I can assist with <a href="#services">prototypes</a>, <a href="#services">pattern libraries</a>, <a href="#services">responsive design</a>, accessibility, performance, animation, and more!</p>
-    -->
-
-    <!--
-    <p> As part of a team, I’ll help facilitate the process of moving an idea from a sketch, to a <a href="#services">prototype</a>, and finally to a finished product. Here are some examples…</p>
-
-      <h2>Example projects</h2>
-    -->
+    <p>Here are some example projects…</p>
 
   </div>
 
-  <a id="projects" href="/good-fest" class="banner" style="background-image: url(/images/projects/goodfest-shows.png); background-position: bottom;">
-    <div>
-      <h3>GOOD Fest</h3>
-      <p>Google &amp; GOOD Worldwide</p>
-    </div>
-  </a>
-
-  <a href="/grand-park" class="banner" style="background-image: url(/images/projects/july4.png)">
-    <div>
-      <h3>4th of July <span style="display: inline-block">at Grand Park</span></h3>
-      <p><span style="display: inline-block">The Music Center</span></p>
-    </div>
-  </a>
-
-  <a href="/kiva" class="banner" style="background-image: url(/images/projects/kiva-timeline.png);">
-    <div>
-      <h3>10 Days of Lending</h3>
-      <p>PayPal, Kiva, &amp; GOOD Worldwide</p>
-    </div>
-  </a>
-
-  <a href="/good" class="banner" style="background-image: url(/images/projects/fb7ad8d8196c576d0761b817d1e5d4167855735e.jpg)">
-    <div>
-      <h3>GOOD Worldwide</h3>
-      <p><span style="display: inline-block">Type/Code</span></p>
-    </div>
-  </a>
-
-  <a href="/food-oasis" class="banner" style="background-image: url(/images/projects/food-oasis-map.png);">
-    <div>
-      <h3>Food Oasis <span style="display: inline-block">Los Angeles</span></h3>
-      <p><span style="display: inline-block">Code for America</span></p>
-    </div>
-  </a>
-
-  <a href="/ctzn-app" class="banner" style="background-image: url(/images/projects/55ce0d52c180524eb3d2c6e8e0fabf630700.jpg=s2048x2048.jpeg); background-position: 50% 25%;">
-    <div>
-      <h3>CTZN App</h3>
-      <p><span style="display: inline-block">GOOD Worldwide</span></p>
-    </div>
-  </a>
-
-  <!--
-  <a href="https://nyela.grandparkla.org" class="banner" style="background-image: url(/images/projects/nyela.png)">
-    <div>
-      <h3>New Year’s Eve at Grand Park</h3>
-      <p>with the Music Center</p>
-    </div>
-  </a>
-  -->
-
-  <a href="/good-community" class="banner" style="background-image: url(/images/projects/good-community.png); background-size: cover; background-position: -30px 50%;">
-    <div>
-      <h3>GOOD Community</h3>
-    </div>
-  </a>
-
-  <a href="/ok-the-store" class="banner" style="background-image: url(/images/projects/ok-the-store-pencils.jpg)">
-    <div>
-      <h3>OK the Store</h3>
-      <p><span style="display: inline-block">Barrel Strength Design</span></p>
-    </div>
-  </a>
-
-  <a href="/jj-burns" class="banner" style="background-image: url(/images/projects/fahrenheit-jjburns.jpg); background-position: 2% 50%;">
-    <div>
-      <h3>JJ Burns &amp; Company</h3>
-      <p><span style="display: inline-block">Fahrenheit Studio</span></p>
-    </div>
-  </a>
-
-  <a href="/fahrenheit" class="banner" style="background-image: url(/images/projects/fahrenheit-zansaar.jpg)">
-    <div>
-      <h3>Fahrenheit Studio</h3>
-    </div>
-  </a>
-
-  <!--
-  <div class="container" id="process">
-
-    <h1>Process</h1>
-
-    <p>I work best side-by-side with a decision-maker, moving ideas from sketch-form to a prototype and then to a finished web site.</p>
-
-    <h2>Accessible</h2>
-    <p>I use industry best practices like web standards and progressive enhancement to build web sites that work well for everyone, regardless of what device they’re&nbsp;using.</p>
-
-    <h2>Maintainable</h2>
-    <p>I like to write simple code, and tailor it for a team or project–using browser features before writing custom code, whenever I can.</p>
-
-    <h2>Beautiful</h2>
-    <p>I balance aesthetics with constraints like download and processing time. I love great design, and work hard to make web sites visually stunning and&nbsp;fast.</p>
-
-  </div>
-  -->
+  <ul class="projects">
+    <li>
+      <a href="/good-fest" class="banner" style="background-image: url(/images/projects/goodfest-shows.png); background-position: bottom;">
+        <div>
+          <h3>GOOD Fest</h3>
+          <p>Google &amp; GOOD Worldwide</p>
+        </div>
+      </a>
+    </li>
+    <li>
+      <a href="/grand-park" class="banner" style="background-image: url(/images/projects/july4.png)">
+        <div>
+          <h3>4th of July <span class="phrase">at Grand Park</span></h3>
+          <p><span class="phrase">The Music Center</span></p>
+        </div>
+      </a>
+    </li>
+    <li>
+      <a href="/kiva" class="banner" style="background-image: url(/images/projects/kiva-timeline.png)">
+        <div>
+          <h3>10 Days of Lending</h3>
+          <p>PayPal, Kiva, &amp; GOOD Worldwide</p>
+        </div>
+      </a>
+    </li>
+    <li>
+      <a href="/good" class="banner" style="background-image: url(/images/projects/fb7ad8d8196c576d0761b817d1e5d4167855735e.jpg)">
+        <div>
+          <h3>GOOD Worldwide</h3>
+          <p><span class="phrase">Type/Code</span></p>
+        </div>
+      </a>
+    </li>
+    <li>
+      <a href="/food-oasis" class="banner" style="background-image: url(/images/projects/food-oasis-map.png)">
+        <div>
+          <h3>Food Oasis <span class="phrase">Los Angeles</span></h3>
+          <p><span class="phrase">Code for America</span></p>
+        </div>
+      </a>
+    </li>
+    <li>
+      <a href="/ctzn-app" class="banner" style="background-image: url(/images/projects/55ce0d52c180524eb3d2c6e8e0fabf630700.jpg=s2048x2048.jpeg); background-position: 50% 25%;">
+        <div>
+          <h3>CTZN App</h3>
+          <p><span class="phrase">GOOD Worldwide</span></p>
+        </div>
+      </a>
+    </li>
+    <li>
+      <a href="/good-community" class="banner" style="background-image: url(/images/projects/good-community.png); background-size: cover; background-position: -30px 50%;">
+        <div>
+          <h3>GOOD Community</h3>
+        </div>
+      </a>
+    </li>
+    <li>
+      <a href="/ok-the-store" class="banner" style="background-image: url(/images/projects/ok-the-store-pencils.jpg)">
+        <div>
+          <h3>OK the Store</h3>
+          <p><span class="phrase">Barrel Strength Design</span></p>
+        </div>
+      </a>
+    </li>
+    <li>
+      <a href="/jj-burns" class="banner" style="background-image: url(/images/projects/fahrenheit-jjburns.jpg); background-position: 2% 50%;">
+        <div>
+          <h3>JJ Burns &amp; Company</h3>
+          <p><span class="phrase">Fahrenheit Studio</span></p>
+        </div>
+      </a>
+    </li>
+    <li>
+      <a href="/fahrenheit" class="banner" style="background-image: url(/images/projects/fahrenheit-zansaar.jpg)">
+        <div>
+          <h3>Fahrenheit Studio</h3>
+        </div>
+      </a>
+    </li>
+  </ul>
 
   <div class="container" id="services">
     <h1>Services</h1>
@@ -282,7 +122,7 @@ class: home
     <ul>
       <li>
         <h2>Prototypes</h2>
-        <p>Get an <a href="https://jimthoburn.github.io/goodinc-ui/design/">interactive sketch</a> for your project. These can be tested with users, to help choose a direction for a new product.</p>
+        <p>Get an <a href="https://jimthoburn.github.io/goodinc-ui/design/" aria-label="example prototype">interactive sketch</a> for your project. These can be tested with users, to help choose a direction for a new product.</p>
       </li>
       <!--
       <li>
@@ -293,20 +133,21 @@ class: home
       -->
       <li>
         <h2>Universal design</h2>
-        <p>From your ideas, sketches or high-fidelity compositions, I’ll make a fast, lightweight and <a href="http://www.goodinc.com/about/philosophy">robust user interface</a>—that’s responsive and accessible to anyone in your audience—built with production-ready HTML, CSS and JavaScript.</p>
+        <p>From your ideas, sketches or high-fidelity compositions, I’ll make a fast, lightweight and <a href="http://www.goodinc.com/about/philosophy" aria-label="example universal design">robust user interface</a>—that’s responsive and accessible to anyone in your audience—built with production-ready HTML, CSS and JavaScript.</p>
       </li>
       <li>
         <h2>Pattern libraries</h2>
-        <p>During the development process, I’ll look for and document <a href="https://jimthoburn.github.io/goodinc-ui/build/">resuable code</a>. This will help you create additional pages and features for your project in the future.</p>
+        <p>During the development process, I’ll look for and document <a href="https://jimthoburn.github.io/goodinc-ui/build/" aria-label="example pattern library">resuable code</a>. This will help you create additional pages and features for your project in the future.</p>
       </li>
     </ul>
+
     <h2>I can also assist with…</h2>
     <p>…browser/device compatibility, testing and improving accessibility, optimizing front end code for performance, integration with templates, and responsive HTML emails.</p>
   </div>
 
-  <div class="container">
+  <div class="container" id="hello">
 
-    <h1 id="hello">Say hello!</h1>
+    <h1>Say hello!</h1>
     <p>I’m available to help on a web project in the fall &amp; winter of 2017. <!--🍃🍂🍁--></p>
     <p class="action"><a href="mailto:hello@tobbi.co">hello@tobbi.co</a></p>
 
