--- a/kiva.html
+++ b/kiva.html
@@ -79,12 +79,12 @@ title: 10 Days of Lending
 
   </div>
 
-  <a href="/good" class="banner" style="background-image: url(/images/projects/fb7ad8d8196c576d0761b817d1e5d4167855735e.jpg); background-size: cover; background-position: 50% 50%;">
+  <a href="/good" class="banner next" style="background-image: url(/images/projects/fb7ad8d8196c576d0761b817d1e5d4167855735e.jpg); background-size: cover; background-position: 50% 50%;">
     <div>
       <h2>Next project →</h2>
     </div>
     <div>
       <h1>GOOD Worldwide</h1>
-      <p>with the teams at <span style="display: inline-block">Type/Code</span> and <span style="display: inline-block">GOOD Worldwide</span></p>
+      <p>with the teams at <span class="phrase">Type/Code</span> and <span class="phrase">GOOD Worldwide</span></p>
     </div>
   </a>
