--- a/ok-the-store.html
+++ b/ok-the-store.html
@@ -89,12 +89,12 @@ title: OK the Store
 
   </div>
 
-  <a href="/jj-burns" class="banner" style="background-image: url(/images/projects/jj-burns.jpg)">
+  <a href="/jj-burns" class="banner next" style="background-image: url(/images/projects/jj-burns.jpg)">
     <div>
       <h2>Next project →</h2>
     </div>
     <div>
       <h1>JJ Burns &amp; Company</h1>
-      <p>with the team at <span style="display: inline-block">Fahrenheit Studio</span></p>
+      <p>with the team at <span class="phrase">Fahrenheit Studio</span></p>
     </div>
   </a>
