--- a/fahrenheit.html
+++ b/fahrenheit.html
@@ -90,12 +90,12 @@ title: Fahrenheit Studio
 
   </div>
 
-  <a href="/good-fest" class="banner" style="background-image: url(/images/projects/eab30c1d4cf4ea2d85fbed9b3da40cb6ccc06667.jpg=s2048x2048.jpeg); background-position: top;">
+  <a href="/good-fest" class="banner next" style="background-image: url(/images/projects/eab30c1d4cf4ea2d85fbed9b3da40cb6ccc06667.jpg=s2048x2048.jpeg); background-position: top;">
     <div>
       <h2>Next project →</h2>
     </div>
     <div>
       <h1>GOOD Fest</h1>
-      <p>with the team at <span style="display: inline-block">GOOD Worldwide,</span> <span style="display: inline-block">sponsored by Google</span></p>
+      <p>with the team at <span class="phrase">GOOD Worldwide,</span> <span class="phrase">sponsored by Google</span></p>
     </div>
   </a>
