--- a/food-oasis.html
+++ b/food-oasis.html
@@ -7,8 +7,8 @@ title: Food Oasis Los Angeles
 
   <div class="banner" style="background-image: url(/images/projects/food-oasis-responsive.jpg); background-position: 25% 50%;">
     <div>
-      <h1>Food Oasis <span style="display: inline-block;">Los Angeles</span></h1>
-      <p>with the volunteers at <a href="http://hackforla.nationbuilder.com/about" style="display: inline-block;">Code for America</a></p>
+      <h1>Food Oasis <span class="phrase">Los Angeles</span></h1>
+      <p>with the volunteers at <a href="http://hackforla.nationbuilder.com/about" class="phrase">Code for America</a></p>
     </div>
   </div>
 
@@ -151,12 +151,12 @@ title: Food Oasis Los Angeles
 
   </div>
 
-  <a href="/ctzn-app" class="banner" style="background-image: url(/images/projects/55ce0d52c180524eb3d2c6e8e0fabf630700.jpg=s2048x2048.jpeg); background-position: 50% 25%;">
+  <a href="/ctzn-app" class="banner next" style="background-image: url(/images/projects/55ce0d52c180524eb3d2c6e8e0fabf630700.jpg=s2048x2048.jpeg); background-position: 50% 25%;">
     <div>
       <h2>Next project →</h2>
     </div>
     <div>
       <h1>CTZN App</h1>
-      <p>with the team at <span style="display: inline-block">GOOD Worldwide</span></p>
+      <p>with the team at <span class="phrase">GOOD Worldwide</span></p>
     </div>
   </a>
