--- a/jj-burns.html
+++ b/jj-burns.html
@@ -93,12 +93,12 @@ title: JJ Burns
 
   </div>
 
-  <a href="/fahrenheit" class="banner" style="background-image: url(/images/projects/fahrenheit.jpg)">
+  <a href="/fahrenheit" class="banner next" style="background-image: url(/images/projects/fahrenheit.jpg)">
     <div>
       <h2>Next project →</h2>
     </div>
     <div>
       <h1>Fahrenheit Studio</h1>
-      <p>with the team at <span style="display: inline-block">Fahrenheit Studio</span></p>
+      <p>with the team at <span class="phrase">Fahrenheit Studio</span></p>
     </div>
   </a>
