--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ class: home
   <div class="container" id="services">
     <h1>Services</h1>
 
-    <ul>
+    <ul class="services">
       <li>
         <h2>Prototypes</h2>
         <p>Get an <a href="https://jimthoburn.github.io/goodinc-ui/design/" aria-label="example prototype">interactive sketch</a> for your project. These can be tested with users, to help choose a direction for a new product.</p>
