Re-organize banner CSS

--- a/ctzn-app.html
+++ b/ctzn-app.html
@@ -10,7 +10,7 @@ title: CTZN App
       <h1>CTZN App</h1>
       <p>with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
     </div>
-    <p class="credit"><a href="https://www.linkedin.com/in/benisonchoi">Photo by <b>Benison Choi</b></a></p>
+    <p class="credit"><a href="https://www.linkedin.com/in/benisonchoi">Photo by <span>Benison Choi</span></a></p>
   </div>
 
   <div class="container">
