--- a/good.html
+++ b/good.html
@@ -10,7 +10,7 @@ title: GOOD Worldwide
       <h1>GOOD Worldwide</h1>
       <p>with the teams at <a href="http://typecode.com">Type/Code</a> and <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
     </div>
-    <p class="credit"><a href="http://www.musiccenter.org">Photo by <b>The Music Center</b></a></p>
+    <p class="credit"><a href="http://www.musiccenter.org">Photo by <span>The Music Center</span></a></p>
   </div>
 
   <div class="container">
