Re-organize banner styles.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ class: home
 
     <p class="action"><a href="#hello">Say hello</a></p>
 
-    <p>If you’re making a web site or application, I can assist with prototypes, <a href="#services">universal design</a>, pattern libraries, and more!</p>
+    <p>If you’re making a web site or application, I can assist with prototypes, <a href="#services">universal design</a>, pattern libraries, <span class="phrase">and more!</span></p>
 
     {% comment %}
     <!--
