Simplify CSS selectors

--- a/ctzn-app.html
+++ b/ctzn-app.html
@@ -8,7 +8,7 @@ title: CTZN App
   <div class="banner" style="background-image: url(/images/projects/55ce0d52c180524eb3d2c6e8e0fabf630700.jpg=s2048x2048.jpeg)">
     <div>
       <h1>CTZN App</h1>
-      <p>with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
+      <p class="with">with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
     </div>
     <p class="credit"><a href="https://www.linkedin.com/in/benisonchoi">Photo by <span>Benison Choi</span></a></p>
   </div>
@@ -145,6 +145,6 @@ title: CTZN App
     </div>
     <div>
       <h1>GOOD Community</h1>
-      <p>with the team at <span class="phrase">GOOD Worldwide</span></p>
+      <p class="with">with the team at <span class="phrase">GOOD Worldwide</span></p>
     </div>
   </a>
