--- a/fahrenheit.html
+++ b/fahrenheit.html
@@ -8,7 +8,7 @@ title: Fahrenheit Studio
   <div class="banner" style="background-image: url(/images/projects/fahrenheit.jpg); background-position: 25% 50%;">
     <div>
       <h1>Fahrenheit Studio</h1>
-      <p>with the team at <a href="http://fahrenheit.com">Fahrenheit Studio</a></p>
+      <p class="with">with the team at <a href="http://fahrenheit.com">Fahrenheit Studio</a></p>
     </div>
   </div>
 
@@ -96,6 +96,6 @@ title: Fahrenheit Studio
     </div>
     <div>
       <h1>GOOD Fest</h1>
-      <p>with the team at <span class="phrase">GOOD Worldwide,</span> <span class="phrase">sponsored by Google</span></p>
+      <p class="with">with the team at <span class="phrase">GOOD Worldwide,</span> <span class="phrase">sponsored by Google</span></p>
     </div>
   </a>
