--- a/food-oasis.html
+++ b/food-oasis.html
@@ -8,7 +8,7 @@ title: Food Oasis Los Angeles
   <div class="banner" style="background-image: url(/images/projects/food-oasis-responsive.jpg); background-position: 25% 50%;">
     <div>
       <h1>Food Oasis <span class="phrase">Los Angeles</span></h1>
-      <p>with the volunteers at <a href="http://hackforla.nationbuilder.com/about" class="phrase">Code for America</a></p>
+      <p class="with">with the volunteers at <a href="http://hackforla.nationbuilder.com/about" class="phrase">Code for America</a></p>
     </div>
   </div>
 
@@ -157,6 +157,6 @@ title: Food Oasis Los Angeles
     </div>
     <div>
       <h1>CTZN App</h1>
-      <p>with the team at <span class="phrase">GOOD Worldwide</span></p>
+      <p class="with">with the team at <span class="phrase">GOOD Worldwide</span></p>
     </div>
   </a>
