--- a/good-community.html
+++ b/good-community.html
@@ -8,7 +8,7 @@ title: GOOD Community
   <div class="banner" style="background-image: url(/images/projects/good-community.png); background-position: 2% 50%;">
     <div>
       <h1>GOOD Community</h1>
-      <p>with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
+      <p class="with">with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
     </div>
   </div>
 
@@ -126,6 +126,6 @@ title: GOOD Community
     </div>
     <div>
       <h1>OK the Store</h1>
-      <p>with the team at <span class="phrase">Barrel Strength Design</span></p>
+      <p class="with">with the team at <span class="phrase">Barrel Strength Design</span></p>
     </div>
   </a>
