--- a/good-fest.html
+++ b/good-fest.html
@@ -8,7 +8,7 @@ title: GOOD Fest
   <div class="banner" style="background-image: url(/images/projects/eab30c1d4cf4ea2d85fbed9b3da40cb6ccc06667.jpg=s2048x2048.jpeg); background-position: top;">
     <div>
       <h1>GOOD Fest</h1>
-      <p>with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a>, <span class="phrase">sponsored by Google</span></p>
+      <p class="with">with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a>, <span class="phrase">sponsored by Google</span></p>
     </div>
   </div>
 
@@ -158,6 +158,6 @@ title: GOOD Fest
     </div>
     <div>
       <h1>4th of July <span class="phrase">at Grand Park</span></h1>
-      <p>with the team at <span class="phrase">The Music Center</span></p>
+      <p class="with">with the team at <span class="phrase">The Music Center</span></p>
     </div>
   </a>
