--- a/good.html
+++ b/good.html
@@ -8,7 +8,7 @@ title: GOOD Worldwide
   <div class="banner" style="background-image: url(/images/projects/fb7ad8d8196c576d0761b817d1e5d4167855735e.jpg)">
     <div>
       <h1>GOOD Worldwide</h1>
-      <p>with the teams at <a href="http://typecode.com">Type/Code</a> and <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
+      <p class="with">with the teams at <a href="http://typecode.com">Type/Code</a> and <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
     </div>
     <p class="credit"><a href="http://www.musiccenter.org">Photo by <span>The Music Center</span></a></p>
   </div>
@@ -116,6 +116,6 @@ title: GOOD Worldwide
     </div>
     <div>
       <h1>Food Oasis <span class="phrase">Los Angeles</span></h1>
-      <p>with the volunteers at <span class="phrase">Code for America</span></p>
+      <p class="with">with the volunteers at <span class="phrase">Code for America</span></p>
     </div>
   </a>
