--- a/ok-the-store.html
+++ b/ok-the-store.html
@@ -8,7 +8,7 @@ title: OK the Store
   <div class="banner" style="background-image: url(/images/projects/ok-the-store.jpg)">
     <div>
       <h1>OK the Store</h1>
-      <p>with the team at <a href="https://barrelstrengthdesign.com">Barrel Strength Design</a></p>
+      <p class="with">with the team at <a href="https://barrelstrengthdesign.com">Barrel Strength Design</a></p>
     </div>
   </div>
 
@@ -95,6 +95,6 @@ title: OK the Store
     </div>
     <div>
       <h1>JJ Burns &amp; Company</h1>
-      <p>with the team at <span class="phrase">Fahrenheit Studio</span></p>
+      <p class="with">with the team at <span class="phrase">Fahrenheit Studio</span></p>
     </div>
   </a>
