--- a/jj-burns.html
+++ b/jj-burns.html
@@ -8,7 +8,7 @@ title: JJ Burns
   <div class="banner" style="background-image: url(/images/projects/jj-burns.jpg); background-position: left;">
     <div>
       <h1>JJ Burns &amp; Company</h1>
-      <p>with the team at <a href="http://fahrenheit.com">Fahrenheit Studio</a></p>
+      <p class="with">with the team at <a href="http://fahrenheit.com">Fahrenheit Studio</a></p>
     </div>
   </div>
 
@@ -99,6 +99,6 @@ title: JJ Burns
     </div>
     <div>
       <h1>Fahrenheit Studio</h1>
-      <p>with the team at <span class="phrase">Fahrenheit Studio</span></p>
+      <p class="with">with the team at <span class="phrase">Fahrenheit Studio</span></p>
     </div>
   </a>
